Scroll wheel zoom in view3d fails on OS X #47153

Closed
opened 2016-01-10 10:42:11 +01:00 by Spencer Alves · 7 comments

System Information
OS X 10.11.2
EVGA GeForce GTX 960
Logitech Performance MX mouse

Blender Version
Broken: a8dd0af8cf
Worked: f42ae6c569

Short description of error
Using the scroll wheel on my mouse rotates the 3D view up and down instead of zooming in and out, like I would expect. The user preferences are all set to default, and disabling the trackpad bindings disables zooming altogether. I'm using a desktop and I do not have a trackpad, nor any multitouch devices (to my knowledge). The release version 2.76b does not have this commit and does not have this issue.

Exact steps for others to reproduce the error
Open Blender a8dd0af in OS X 10.11 on the default scene. Dismiss the splash screen. Position the mouse cursor over the 3D viewport. Scroll the mouse wheel. Observe a horizontal camera orbit. Open User Preferences -> Input -> 3D View -> 3D View (Global), and observe Zoom View set to Mouse Wheel and Rotate View set to Mouse/Trackpad Pan.

**System Information** OS X 10.11.2 EVGA GeForce GTX 960 Logitech Performance MX mouse **Blender Version** Broken: a8dd0af8cf793f991bcaa0c219c1a3b2dc10a910 Worked: f42ae6c569fd09a17f6554a2c72057239e5477ec **Short description of error** Using the scroll wheel on my mouse rotates the 3D view up and down instead of zooming in and out, like I would expect. The user preferences are all set to default, and disabling the trackpad bindings disables zooming altogether. I'm using a desktop and I do not have a trackpad, nor any multitouch devices (to my knowledge). The release version 2.76b does not have this commit and does not have this issue. **Exact steps for others to reproduce the error** Open Blender a8dd0af in OS X 10.11 on the default scene. Dismiss the splash screen. Position the mouse cursor over the 3D viewport. Scroll the mouse wheel. Observe a horizontal camera orbit. Open User Preferences -> Input -> 3D View -> 3D View (Global), and observe Zoom View set to Mouse Wheel and Rotate View set to Mouse/Trackpad Pan.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @impiaaa

Added subscriber: @impiaaa

Added subscriber: @brecht

Added subscriber: @brecht
Brecht Van Lommel self-assigned this 2016-01-10 16:40:54 +01:00

I guess you tested this using your own build since you narrowed it down to one specific commit. What are the values of CMAKE_OSX_DEPLOYMENT_TARGET and CMAKE_OSX_SYSROOT in your CMakeCache.txt?

Does the latest build from https://builder.blender.org/download have the same issue?

I guess you tested this using your own build since you narrowed it down to one specific commit. What are the values of `CMAKE_OSX_DEPLOYMENT_TARGET` and `CMAKE_OSX_SYSROOT` in your CMakeCache.txt? Does the latest build from https://builder.blender.org/download have the same issue?
Author

In #47153#353251, @brecht wrote:
I guess you tested this using your own build since you narrowed it down to one specific commit.

Oh yeah, I guess I never actually said that. :)

What are the values of CMAKE_OSX_DEPLOYMENT_TARGET and CMAKE_OSX_SYSROOT in your CMakeCache.txt?

CMAKE_OSX_DEPLOYMENT_TARGET=10.6
CMAKE_OSX_SYSROOT=/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.11.sdk

Does the latest build from https://builder.blender.org/download have the same issue?

The buildbot builds do have the same issue.

Also, I was able to "fix" my problem by deleting intern/ghost/intern/GHOST_SystemCocoa.mm lines 1401 and 1402:

if ([event respondsToSelector:@selector(hasPreciseScrollingDeltas)])
    hasMultiTouch = [event hasPreciseScrollingDeltas];

…so I'm guessing hasPreciseScrollingDeltas doesn't actually determine if it's a multitouch device, but I don't have any multitouch devices, so I can't test or fix it.

> In #47153#353251, @brecht wrote: > I guess you tested this using your own build since you narrowed it down to one specific commit. Oh yeah, I guess I never actually said that. :) > What are the values of `CMAKE_OSX_DEPLOYMENT_TARGET` and `CMAKE_OSX_SYSROOT` in your CMakeCache.txt? CMAKE_OSX_DEPLOYMENT_TARGET=10.6 CMAKE_OSX_SYSROOT=/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.11.sdk > Does the latest build from https://builder.blender.org/download have the same issue? The buildbot builds do have the same issue. Also, I was able to "fix" my problem by deleting intern/ghost/intern/GHOST_SystemCocoa.mm lines 1401 and 1402: ``` if ([event respondsToSelector:@selector(hasPreciseScrollingDeltas)]) hasMultiTouch = [event hasPreciseScrollingDeltas]; ``` …so I'm guessing `hasPreciseScrollingDeltas` doesn't actually determine if it's a multitouch device, but I don't have any multitouch devices, so I can't test or fix it.
Campbell Barton changed title from Revision a8dd0af breaks scroll wheel zooming in view3d on OS X to Scroll wheel zoom in view3d fails on OS X 2016-01-11 06:18:18 +01:00

This issue was referenced by 6451c072ce

This issue was referenced by 6451c072cef853cbdbd9db1b149463f959fb6d47

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47153
No description provided.