Fix T47153: scroll wheel zoom fails with mouses that support smooth scroll on OS X.